<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_normal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="216dp"
            android:layout_height="204dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/take_picture_rounded_corners"
            android:scaleType="center"
            android:src="@drawable/ic_photo"
            app:shapeAppearance="@style/RoundedImageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:helperText="@string/add_title"
            style="@style/InputField"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cocktail_name"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:helperText="@string/optional_field"
            style="@style/InputField"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cocktail_description"
                style="@style/Text"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minHeight="154dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:helperText="@string/optional_field"
            style="@style/InputField"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cocktail_receipt"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/recipe"
                android:inputType="textMultiLine"
                android:minHeight="154dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/FilledButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/save" />

        <Button
            style="@style/OutlineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cancel" />

    </LinearLayout>
</ScrollView>
